# turtlebot3

people_detect/: CMakeLists.txt  package.xml
people_detect/src/: people_detect.py
turtlebot3/: package.xml
turtlebot3_navigation/launch/: turtlebot3_navigation.launch
turtlebot3_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
turtlebot3_navigation/rviz/: turtlebot3_nav.rviz
